# qwen-digital-human

./: .gitignore  CLAUDE.md  Cargo.toml  FINAL_SUMMARY.md  MIGRATION_ANALYSIS.md  MIGRATION_PROGRESS.md  Makefile  README.md  START.md
backend/: .env.example  README.md  pyproject.toml
backend/src/qdh_backend/: __init__.py  audio.py  avatar.py  intent.py  llm.py  main.py  map_search.py  model_manager.py  rag.py  schemas.py  settings.py  state.py  stream_protocol.py  tts_provider.py  viseme_extractor.py
backend/src/qdh_backend/routes/: asr_ws.py  chat.py  context.py  map.py  models.py  pipeline.py  tts.py  ue5_ws.py
backend/tests/: conftest.py  test_contracts.py  test_stream_protocol.py
frontend/: README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: pcm-streaming-worklet.js
frontend/src/: App.vue  main.ts
frontend/src/api/: chat.ts  map.ts
frontend/src/assets/styles/: main.css
frontend/src/components/: MainLayout.vue
frontend/src/composables/: useAudioPlayer.ts  useBrowserASR.ts  useConfigPage.ts  useDigitalHuman.ts  useLive2D.ts  useModelManagement.ts  useStreamingChat.ts  useTTS.ts
frontend/src/constants/: config.ts
frontend/src/router/: index.ts
frontend/src/stores/: avatar.ts  chat.ts  faceTracking.ts  map.ts
frontend/src/types/: api.ts  avatar.ts  chat.ts
frontend/src/utils/: audio.ts  intent.ts  markdown.ts  math.ts  storage.ts  streaming.ts
frontend/src/views/: ConfigPage.vue  ModelsPage.vue
src/: a2bs.rs  asr.rs  device.rs  gpu.rs  llm.rs  main.rs  map.rs  mcp.rs  model_manager.rs  nnr.rs  rag.rs  tts.rs
static/: config.html  config.js  index.html  main.js  models.html
ue5-digital-human/: QwenDigitalHuman.uproject
ue5-digital-human/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
ue5-digital-human/Scripts/: README.md  setup_pixel_streaming.sh
ue5-digital-human/Source/: QwenDigitalHuman.Build.cs  QwenDigitalHuman.cpp  QwenDigitalHumanEditor.Target.cs
(+19 files in other folders)
