[package]
name = "qwen-digital-human"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
async-stream = "0.3"
futures-util = "0.3"
base64 = "0.22"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
dashmap = "6.0"
sha2 = "0.10"
hex = "0.4"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
# Note: llama-cpp-2 requires C++ compiler and llama.cpp source
llama-cpp-2 = { version = "0.1" } 
tokenizers = "0.19"
encoding_rs = "0.8"
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3"] }
qwen3-asr = { version = "0.2.2", default-features = false, features = ["hub"] }
qwen_tts = "0.1.1"
candle-core-v09 = { package = "candle-core", version = "0.9.2" }
